--- a/Seodery/pom.xml
+++ b/Seodery/pom.xml
@@ -214,6 +214,15 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.6.4</version>
 		</dependency>
+		
+		<!-- JSON -->
+		<dependency>
+		    <groupId>com.googlecode.json-simple</groupId>
+		    <artifactId>json-simple</artifactId>
+		    <version>1.1.1</version>
+		</dependency>
+
+		
 	</dependencies>
 	<build>
 		<plugins>
